[package]
name = "ic-embedders"
version = "0.8.0"
edition = "2021"

[dependencies]
anyhow = "1.0.31"
ic-config = { git = "https://github.com/dfinity/ic", rev = "dca3091bc0a1a7f175c57464068c86ba19a556e6" }
ic-cycles-account-manager = { git = "https://github.com/dfinity/ic", rev = "dca3091bc0a1a7f175c57464068c86ba19a556e6" }
ic-interfaces = { git = "https://github.com/dfinity/ic", rev = "dca3091bc0a1a7f175c57464068c86ba19a556e6" }
ic-logger = { git = "https://github.com/dfinity/ic", rev = "dca3091bc0a1a7f175c57464068c86ba19a556e6" }
ic-registry-subnet-type = { git = "https://github.com/dfinity/ic", rev = "dca3091bc0a1a7f175c57464068c86ba19a556e6" }
ic-replicated-state = { git = "https://github.com/dfinity/ic", rev = "dca3091bc0a1a7f175c57464068c86ba19a556e6" }
ic-sys = { git = "https://github.com/dfinity/ic", rev = "dca3091bc0a1a7f175c57464068c86ba19a556e6" }
ic-system-api = { git = "https://github.com/dfinity/ic", rev = "dca3091bc0a1a7f175c57464068c86ba19a556e6" }
ic-metrics = { git = "https://github.com/dfinity/ic", rev = "dca3091bc0a1a7f175c57464068c86ba19a556e6" }
ic-types = { git = "https://github.com/dfinity/ic", rev = "dca3091bc0a1a7f175c57464068c86ba19a556e6" }
ic-utils = { git = "https://github.com/dfinity/ic", rev = "dca3091bc0a1a7f175c57464068c86ba19a556e6" }
ic-wasm-types = { git = "https://github.com/dfinity/ic", rev = "dca3091bc0a1a7f175c57464068c86ba19a556e6" }
libc = "0.2.91"
libflate = "1.1.2"
memory_tracker = { git = "https://github.com/dfinity/ic", rev = "dca3091bc0a1a7f175c57464068c86ba19a556e6" }
nix = "0.23.0"
prometheus = { version = "0.12.0", features = [ "process" ] }
serde = { version = "1.0.99", features = [ "derive" ] }
serde_bytes = "0.11"
slog = { version = "2.5.2", features = ["nested-values", "release_max_level_debug"] }
slog-term = "2.6.0"
wasmtime = { version = "6.0.1", default_features = false, features = ['cranelift', 'parallel-compilation', 'posix-signals-on-macos'] }
wasmtime-environ = "6.0.1"
wasmtime-runtime =  "6.0.1"
wasm-encoder = "0.23.0"
wasmparser = "0.100.0"
rayon = "1.5.1"
